--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
+    "flubber": "^0.4.2",
+    "framer-motion": "^12.14.0",
+    "gsap": "^3.13.0",
+    "locomotive-scroll": "^4.1.4",
     "next": "15.3.2",
     "nuqs": "^2.4.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sass": "^1.89.0"
   },
   "devDependencies": {
     "typescript": "^5",
