fix add icon library

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.14.0",
     "gsap": "^3.13.0",
     "locomotive-scroll": "^4.1.4",
+    "lucide-react": "^0.513.0",
     "next": "15.3.2",
     "nuqs": "^2.4.3",
     "react": "^19.0.0",
